<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataCollector</string>
    <string name="action_add_sensor">Sensor hinzufügen</string>
    <string name="ensure_no_device_is_streaming">Bitte gehe sicher, dass kein Gerät gerade Daten überträgt</string>
    <string name="device_is_already_in_list">Gerät ist schon in der Liste</string>
    <string name="paired_devices">Gekoppelte Geräte</string>
    <string name="other_devices">Weitere Geräte</string>
    <string name="scan">Scan</string>
    <string name="select_device">Wähle Gerät aus</string>
    <string name="non_paired">Keine gekoppelt</string>
    <string name="scanning">Scanning</string>
    <string name="none_found">Keine gefunden</string>
    <string name="feedback">Feedback</string>
    <string name="gps_not_available">GPS ist nicht verfügbar.</string>
    <string name="not_agree">Trifft nicht zu</string>
    <string name="agree">Trifft zu</string>
    <string name="item01">Ich fühle mich optimal beansprucht.</string>
    <string name="item02">Meine Gedanken bzw. Aktivitäten laufen flüssig und glatt.</string>
    <string name="item03">Ich merke gar nicht, wie die Zeit vergeht.</string>
    <string name="item04">Ich habe keine Mühe, mich zu konzentrieren.</string>
    <string name="item05">Mein Kopf ist völlig klar.</string>
    <string name="item06">Ich bin ganz vertieft in das, was ich gerade mache.</string>
    <string name="item07">Die richtigen Gedanken/Bewegungen kommen wie von selbst.</string>
    <string name="item08">Ich weiß bei jedem Schritt, was ich zu tun habe.</string>
    <string name="item09">Ich habe das Gefühl, den Ablauf unter Kontrolle zu haben.</string>
    <string name="item10">Ich bin völlig selbstvergessen.</string>
    <string name="item11">Es steht etwas für mich Wichtiges auf dem Spiel.</string>
    <string name="item12">Ich darf jetzt keine Fehler machen.</string>
    <string name="item13">Ich mache mir Sorgen über einen Misserfolg.</string>
    <string name="item14">Verglichen mit allen anderen Tätigkeiten, die ich sonst mache, ist die
        jetzige Tätigkeit...
    </string>
    <string name="item15">Ich denke, meine Fähigkeiten auf diesem Gebiet sind...</string>
    <string name="item16">Für mich persönlich sind die jetzigen Anforderungen...</string>
    <string name="too_low">zu gering</string>
    <string name="too_high">zu hoch</string>
    <string name="save">Speichern</string>
    <string name="low">niedrig</string>
    <string name="high">hoch</string>
    <string name="easy">leicht</string>
    <string name="difficult">schwer</string>
    <string name="action_connect">Verbinden</string>
    <string name="action_disconnect">Trennen</string>
    <string name="action_stop_streaming">Abrufen stoppen</string>
    <string name="action_start_streaming">Abrufen starten</string>
    <string name="action_toggle_led">LEDs ein/ausschalten</string>
    <string name="action_settings">Einstellungen</string>
    <string name="is_ready">ist bereit</string>

    <string name="enable_sensors_done">Done</string>
    <string name="settings_scala_time_text">Scala Timer (m)</string>
    <string name="settings_scala_time_variance_text">Scala Time Variance (s)</string>
    <string name="settings_save">Speichern</string>
    <string name="questionnaire">Fragebogen</string>
    <string name="graph">Graph</string>
    <string name="startQuestionnaire">Fragebogen starten</string>

    <string-array name="scale_timerValues">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string-array name="scale_timerVarianceValues">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
    </string-array>

    <string name="gps_not_connected">GPS nicht verbunden.</string>
    <string name="gps_connected">GPS verbunden.</string>
    <string name="gps_connected_fix_received">GPS verbunden und Fix erhalten.</string>
</resources>
