<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.bogutzky.datacollector.app.MainActivity">
    <item
        android:id="@+id/action_add_sensor"
        android:orderInCategory="100"
        android:title="@string/action_add_sensor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        android:enabled="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_streaming"
        android:orderInCategory="100"
        android:title="@string/action_start_streaming"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_streaming"
        android:orderInCategory="100"
        android:title="@string/action_stop_streaming"
        android:enabled="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_led"
        android:orderInCategory="100"
        android:title="@string/action_toggle_led"
        app:showAsAction="never" />
</menu>
